--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,13 @@ name: RUC Score Check
 
 on:
   schedule:
-    # 这里的语法是 Cron 表达式
-    # */30 * * * * 表示每 30 分钟运行一次
-    # 你可以改成 0 * * * * 表示每小时运行一次
     - cron: '*/30 * * * *'
-  # 允许手动点击按钮触发（方便调试）
   workflow_dispatch:
 
 jobs:
   check_score:
     runs-on: ubuntu-latest
     
-    # 赋予写入权限，以便把 scores.json 存回仓库
     permissions:
       contents: write
 
@@ -27,12 +22,16 @@ jobs:
         python-version: '3.9'
 
     - name: Install dependencies
+      # 注意：如果 requirements.txt 也在 src 里，这里要改成 pip install -r src/requirements.txt
+      # 如果 requirements.txt 在最外层（根目录），就保持原样
       run: |
-        pip install -r requirements.txt
+        pip install requests ddddocr
 
     - name: Run Check Script
+      # 【修改点 1】指定工作目录为 src
+      # 这样 python 就会在 src 文件夹内部运行，能找到 main.py 和 RucSpider.py
+      working-directory: ./src 
       env:
-        # 将 GitHub Secrets 注入到环境变量中
         STUDENT_ID: ${{ secrets.STUDENT_ID }}
         PASSWORD: ${{ secrets.PASSWORD }}
         MAIL_USER: ${{ secrets.MAIL_USER }}
@@ -42,11 +41,12 @@ jobs:
 
     - name: Commit and Push if changes
       run: |
-        # 配置 git 身份
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        # 检查 scores.json 是否有变动
-        git add scores.json
-        # 如果没有变动，git commit 会报错，所以加个 || echo 防止报错停止
+        
+        # 【修改点 2】因为脚本在 src 里运行，scores.json 也会生成在 src 里
+        # 所以我们要 add 这个具体路径
+        git add src/scores.json
+        
         git commit -m "Update score records" || echo "No changes to commit"
         git push
